--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -26,7 +26,7 @@ $pink-color-dark-theme:#fc7db6 !default;
 $pink-color-light: #ffdddd !default;
 $yellow-color: #efcc00 !default;
 
-$grey-color: #a8a8a8 !default; // dark theme safe
+$grey-color: #828282 !default; // dark theme safe
 $grey-color-light: color.adjust($grey-color, $lightness: 40%);
 $grey-color-alt: #595959 !default; // light theme safe
 $grey-color-light-alt: color.adjust($grey-color-alt, $lightness: 40%);
